--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=8080
 logging.level.root=INFO
 management.endpoints.web.exposure.include=*
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
-hystrix.command.execution.isolation.thread.timeoutInMilliseconds=1000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
