--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8080
+server.port=8081
 logging.level.root=INFO
 management.endpoints.web.exposure.include=*
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
+bookstore.server=http://localhost:8090
